--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     position: relative;
     text-decoration: none;
     font-family: "Josefin Sans", sans-serif;
-    color: #424242;
+    color: #525252;
     font-weight: 600;
     font-size: 17px;
     transition: color 0.3s ease;
@@ -218,7 +218,7 @@
         }
 
         .hero h1 {
-            font-size: 75px;
+            font-size: 80px;
             margin-bottom: 20px;
             font-weight: 700;
             line-height: 1.2;
@@ -226,7 +226,7 @@
 
         .hero p {
             margin-bottom: 30px;
-            font-size: clamp(16px, 2vw, 18px);
+            font-size: 18px;
         }
 
         .btn {
@@ -374,7 +374,7 @@
 
         .product-price {
             font-weight: normal;
-            color: #464646;
+            color: #585858;
         }
 
         /* Product Detail Section */
@@ -422,7 +422,7 @@
             height: 80px;
             object-fit: cover;
             cursor: pointer;
-            border: 1px solid #a1a1a1;
+            border: 1.5px solid #cacaca;
             transition: border-color 0.3s ease;
         }
 
@@ -431,7 +431,7 @@
         }
 
         .thumbnail.active {
-            border-color: var(--black);
+            border-color: #858585;
         }
 
         .main-image {
@@ -1746,7 +1746,7 @@ window.addEventListener('DOMContentLoaded', () => {
             <div class="products-grid">
                 <!-- Product 1 -->
                 <div class="product-card" data-product="1" data-category="bed sheet">
-                    <span class="product-badge">Limited</span>
+                    <span class="product-badge">Latest</span>
                     <img src="https://images.unsplash.com/photo-1529374255404-311a2a4f1fd9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1738&q=80" alt="Classic Tee" class="product-image">
                     <div class="product-info">
                         <div>
@@ -1758,7 +1758,7 @@ window.addEventListener('DOMContentLoaded', () => {
 
                 <!-- Product 2 -->
                 <div class="product-card" data-product="2"data-category="bed sheet">
-                    <span class="product-badge">NEW</span>
+                    <span class="product-badge">Latest</span>
                     <img src="https://images.unsplash.com/photo-1591047139829-d91aecb6caea?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1736&q=80" alt="Overshirt" class="product-image">
                     <div class="product-info">
                         <div>
@@ -2235,7 +2235,7 @@ document.addEventListener('DOMContentLoaded', function() {
 /* For screens under 400px */
 @media (max-width: 400px) {
     .video-section {
-        height: 250px;
+        height: 240px;
     }
 }
 
