--- a/policy.html
+++ b/policy.html
@@ -423,10 +423,9 @@
                 
                 <h3>Contacting Customer Service</h3>
                 <ul>
-                    <li><strong>Email:</strong> support@ourstore.com (response within 24 hours)</li>
-                    <li><strong>Phone:</strong> 1800-123-4567 (9am-9pm, 7 days a week)</li>
-                    <li><strong>Live Chat:</strong> Available on our website during business hours</li>
-                    <li><strong>WhatsApp:</strong> +91 98765 43210 (24/7 support)</li>
+                    <li><strong>Email:</strong> haseebcollection903@gmail.com (response within 24 hours)</li>
+                    <li><strong>Phone:</strong> 03412825465 (7 days a week)</li>
+                    <li><strong>WhatsApp:</strong> +913412825465 (24/7 support)</li>
                 </ul>
                 
                 <h3>Dispute Resolution</h3>
