--- a/index.html
+++ b/index.html
@@ -1807,7 +1807,7 @@ window.addEventListener('DOMContentLoaded', () => {
                     <img src="product6.jpg" alt="Cargo Pants" class="product-image">
                     <div class="product-info">
                         <div>
-                            <h3 class="product-title">Tactical Cargo Pants</h3>
+                            <h3 class="product-title">Luxury 3-Piece Bedsheet Set – King Size</h3>
                             <p class="product-price">Rs. 1,250</p>
                         </div>
                     </div>
@@ -3349,3 +3349,5 @@ addToCartBtn.addEventListener('click', () => {
     </script>
 </body>
 </html>
+
+   
