--- a/index.html
+++ b/index.html
@@ -1883,7 +1883,7 @@ document.addEventListener('DOMContentLoaded', function() {
                     <div class="product-info">
                         <div>
                             <h3 class="product-title">Luxury 3-Piece Black Bedsheet Set – King Size</h3>
-                            <p class="product-price">$45.00</p>
+                            <p class="product-price">Rs. 1,600</p>
                         </div>
                     </div>
                 </div>
@@ -3349,5 +3349,3 @@ addToCartBtn.addEventListener('click', () => {
     </script>
 </body>
 </html>
-
-   
