--- a/restaurant.html
+++ b/restaurant.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,7 +20,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-   
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     
     <style>
         :root {
@@ -49,11 +52,11 @@
             color: var(--dark-grey);
             overflow-x: hidden;
             line-height: 1.6;
-            font-family: 'Jost', sans-serif;
+           font-family: "Outfit", sans-serif;
         }
 
         h1, h2, h3, h4 {
-            font-family: 'Jost', sans-serif;
+            font-family: "Outfit", sans-serif;
             font-weight: 700;
             color: var(--dark-grey);
         }
@@ -107,7 +110,7 @@
             display: flex;
             align-items: center;
             gap: 0.8rem;
-            font-family: 'Jost', sans-serif;
+            font-family: "Outfit", sans-serif;
             color: var(--dark-grey);
             font-size: 1.8rem;
             font-weight: 600;
@@ -131,7 +134,7 @@
         .search-bar {
             display: flex;
             align-items: center;
-            background: var(--off-white);
+            background: var(--white);
             border-radius: 50px;
             overflow: hidden;
             width: 350px;
@@ -147,7 +150,7 @@
         .search-bar input {
             flex: 1; border: none; padding: 0.8rem 1.5rem; font-size: 0.9rem;
             outline: none; color: var(--dark-grey); background: transparent; min-width: 0;
-            font-family: 'Poppins', sans-serif;
+            font-family: "Outfit", sans-serif;
         }
 
         .search-bar button {
@@ -393,7 +396,7 @@
             gap: 2rem; grid-template-columns: 1fr;
         }
         .footer-logo {
-            font-family: 'Jost', sans-serif; font-size: 2rem; font-weight: 700;
+          font-family: "Outfit", sans-serif; font-size: 2rem; font-weight: 700;
             color: var(--primary-gold); margin-bottom: 1rem; letter-spacing: 1px;
         }
         .footer-tagline { color: var(--light-grey); margin-bottom: 2rem; font-style: italic; }
@@ -431,7 +434,7 @@
             animation: spin 1s ease-in-out infinite;
         }
         @keyframes spin { to { transform: rotate(360deg); } }
-        .loading-text { color: var(--primary-gold); font-size: 1.2rem; margin-top: 1rem; font-family: 'Jost', sans-serif;}
+        .loading-text { color: var(--primary-gold); font-size: 1.2rem; margin-top: 1rem; font-family: "Outfit", sans-serif;}
 
         .toast {
             position: fixed; bottom: 100px; left: 50%; transform: translateX(-50%);
@@ -450,7 +453,7 @@
         .product-detail-image-container { width: 100%; border-radius: 4px; overflow: hidden; padding: none; }
         #detail-image { width: 100%; height: auto; display: block; }
         #detail-title::after { display: none; }
-        .detail-price-tag { font-size: 2.5rem; font-weight: 700; color: var(--dark-grey); margin-bottom: 1.5rem; font-family: 'Jost', sans-serif;}
+        .detail-price-tag { font-size: 2.5rem; font-weight: 700; color: var(--dark-grey); margin-bottom: 1.5rem;  font-family: "Outfit", sans-serif;;}
         .detail-actions { display: flex; flex-direction: column; gap: 1rem; }
         .back-btn {
             background: var(--off-white); color: var(--dark-grey); width: 100%;
@@ -693,9 +696,17 @@ html::-webkit-scrollbar-thumb {
                 <div style="background: rgba(218, 176, 41, 0.1); padding: 1rem; border-radius: var(--border-radius-sm); margin-bottom: 2rem;">
                     <p style="color: var(--light-grey); font-size: 0.9rem;">Estimated delivery: 30-45 minutes</p>
                 </div>
-                <button class="checkout-btn" style="width: auto; padding: 1rem 2rem;" onclick="navigateTo('home-page')">
-                    <i class="fa-regular fa-arrow-left"></i> Back to Home
-                </button>
+  <button class="checkout-btn" onclick="navigateTo('home-page')" style="
+  width: 97%;
+  padding: 1rem 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+">
+  <i class="fa-regular fa-arrow-left"></i> Back to Home
+</button>
+
             </div>
         </div>
 
