--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
    <head>
@@ -1778,12 +1779,12 @@ window.addEventListener('DOMContentLoaded', () => {
             <div class="products-grid">
                 <!-- Product 1 -->
                 <div class="product-card" data-product="1" data-category="bed sheet">
-                    <span class="product-badge">Latest</span>
+                    <span class="product-badge">Sale</span>
                     <img src="product1.jpg" alt="Classic Tee" class="product-image">
                     <div class="product-info">
                         <div>
                             <h3 class="product-title">Luxury 3-Piece Black Bedsheet Set – King Size</h3>
-                            <p class="product-price">Rs. 1,600</p>
+                            <p class="product-price"><del>Rs. 1600</del> Rs. 1,499</p>
                         </div>
                     </div>
                 </div>
@@ -1793,7 +1794,8 @@ window.addEventListener('DOMContentLoaded', () => {
                     <div class="product-info">
                         <div>
                             <h3 class="product-title">Royal Bloom King Size Bedsheet – Purple Fan Pattern</h3>
-                            <p class="product-price">Rs. 1,600</p>
+                            
+                            <p class="product-price"><del>Rs. 1600</del> Rs. 1,499</p>
                         </div>
                     </div>
                 </div>
@@ -1828,7 +1830,7 @@ window.addEventListener('DOMContentLoaded', () => {
                     <div class="product-info">
                         <div>
                             <h3 class="product-title">Regal Hues Bedsheet – Dark Green, Ash Grey & Rustic Mustard</h3>
-                            <p class="product-price">Rs. 1,250</p>
+                            <p class="product-price"><del>Rs. 1250</del> Rs. 1199</p>
                         </div>
                     </div>
                 </div>
@@ -1838,7 +1840,8 @@ window.addEventListener('DOMContentLoaded', () => {
                     <div class="product-info">
                         <div>
                             <h3 class="product-title">Luxury 3-Piece Bedsheet Set – King Size</h3>
-                            <p class="product-price">Rs. 1,250</p>
+                           
+                            <p class="product-price"><del>Rs. 1250</del> Rs. 1199</p>
                         </div>
                     </div>
                 </div>
