--- a/index.html
+++ b/index.html
@@ -1789,7 +1789,7 @@ window.addEventListener('DOMContentLoaded', () => {
                     </div>
                 </div>
                  <div class="product-card" data-product="2"data-category="bed sheet">
-                <span class="product-badge">Latest</span>
+                <span class="product-badge">Sale</span>
                 <img src="product2.jpg" class="product-image">
                     <div class="product-info">
                         <div>
@@ -1802,7 +1802,7 @@ window.addEventListener('DOMContentLoaded', () => {
 
                 <!-- Product 3 -->
                 <div class="product-card" data-product="3"data-category="bed sheet">
-                    <span class="product-badge">Latest</span>
+                    <span class="product-badge">Sold Out</span>
                     <img src="product3.jpg" alt="Cargo Pants" class="product-image">
                     <div class="product-info">
                         <div>
@@ -1814,7 +1814,7 @@ window.addEventListener('DOMContentLoaded', () => {
 
                 <!-- Product 4 -->
                 <div class="product-card" data-product="4" data-category="bed sheet">
-                    <span class="product-badge">Latest</span>
+                    <span class="product-badge">Sold Out</span>
                     <img src="product4.jpg" alt="Hoodie" class="product-image">
                     <div class="product-info">
                         <div>
@@ -1825,7 +1825,7 @@ window.addEventListener('DOMContentLoaded', () => {
                 </div>
 
                  <div class="product-card" data-product="5">
-                    <span class="product-badge">Latest</span>
+                    <span class="product-badge">Sold Out</span>
                     <img src="product5.jpg" alt="Cargo Pants" class="product-image">
                     <div class="product-info">
                         <div>
@@ -1835,7 +1835,7 @@ window.addEventListener('DOMContentLoaded', () => {
                     </div>
                 </div>
                  <div class="product-card" data-product="6">
-                    <span class="product-badge">Latest</span>
+                    <span class="product-badge">Sale</span>
                     <img src="product6.jpg" alt="Cargo Pants" class="product-image">
                     <div class="product-info">
                         <div>
