--- a/index.html
+++ b/index.html
@@ -1916,7 +1916,8 @@ document.addEventListener('DOMContentLoaded', function() {
                     <div class="product-info">
                         <div>
                             <h3 class="product-title">Luxury 3-Piece Black Bedsheet Set – King Size</h3>
-                            <p class="product-price">Rs. 1,600</p>
+                                                        <p class="product-price"><del>Rs. 1600</del> Rs. 1499</p>
+
                         </div>
                     </div>
                 </div>
@@ -1928,7 +1929,7 @@ document.addEventListener('DOMContentLoaded', function() {
                     <div class="product-info">
                         <div>
                             <h3 class="product-title">Textured Elegance King Bedsheet – Urban Striped Pattern</h3>
-                            <p class="product-price">Rs. 1,600</p>
+                              <p class="product-price"><del>Rs. 1600</del> Rs. 1499</p>
                         </div>
                     </div>
                 </div>
@@ -1941,7 +1942,7 @@ document.addEventListener('DOMContentLoaded', function() {
                     <div class="product-info">
                         <div>
                             <h3 class="product-title">Royal Bloom King Size Bedsheet – Purple Fan Pattern</h3>
-                            <p class="product-price">Rs. 1,600</p>
+                             <p class="product-price"><del>Rs. 1600</del> Rs. 1,499</p>
                         </div>
                     </div>
                 </div>
@@ -1952,7 +1953,7 @@ document.addEventListener('DOMContentLoaded', function() {
                     <div class="product-info">
                         <div>
                             <h3 class="product-title">Regal Hues Bedsheet – Dark Green, Ash Grey & Rustic Mustard</h3>
-                            <p class="product-price">Rs. 1,600</p>
+                            <p class="product-price"><del>Rs. 1250</del> Rs. 1199</p>
                         </div>
                     </div>
                 </div>
