--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
    <head>
@@ -3287,7 +3286,7 @@ function closeWishlist() {
     </style>
     <!-- Small network status indicator -->
     <div class="network-status" id="networkStatus">
-        <span id="statusText">Online</span>
+        <span id="statusText"></span>
     </div>
 
 
