--- a/index.html
+++ b/index.html
@@ -821,27 +821,56 @@
 }
 
 
-/* Toast Notification */
 .toast {
     visibility: hidden;
     min-width: 220px;
+    max-width: calc(100% - 40px); /* Adjusted for mobile */
     background-color: #181818;
     color: #fff;
     text-align: center;
-    padding: 10px 14px;
+    padding: 12px 16px;
     position: fixed;
     z-index: 1002;
     opacity: 0;
     font-size: 14px;
-    transition: transform 0.4s ease, opacity 0.4s ease, visibility 0.4s ease;
-    right: 20px;
-    top: 70px;
+    transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    left: 50%;
+    transform: translateX(-50%) translateY(-20px) scale(0.9);
+    top: 20px;
+    border-radius: 4px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
 
-/* Show toast */
+/* Show toast with bounce-in animation */
 .toast.show {
     visibility: visible;
     opacity: 1;
+    transform: translateX(-50%) translateY(0) scale(1);
+}
+/* Different animation variations */
+.toast.slide-in {
+    transform: translateX(-50%) translateY(-100%);
+}
+.toast.slide-in.show {
+    transform: translateX(-50%) translateY(0);
+}
+
+.toast.flip {
+    transform: translateX(-50%) rotateX(90deg);
+    transform-origin: top;
+}
+.toast.flip.show {
+    transform: translateX(-50%) rotateX(0);
+}
+
+.toast.bounce {
+    animation: bounceIn 0.6s;
+}
+@keyframes bounceIn {
+    0% { transform: translateX(-50%) scale(0.3); opacity: 0; }
+    50% { transform: translateX(-50%) scale(1.1); opacity: 1; }
+    70% { transform: translateX(-50%) scale(0.9); }
+    100% { transform: translateX(-50%) scale(1); }
 }
 
 
@@ -850,7 +879,7 @@
     .toast {
         right: 15px;
         top: 60px; /* Adjust for mobile header height */
-        min-width: 180px;
+        min-width: 80%;
         font-size: 13px;
         padding: 8px 12px;
         height: fit-content;
@@ -860,12 +889,12 @@
 /* Responsive adjustments for mobile */
 @media (max-width: 768px) {
     .toast {
-        left: 46%;
+        left: 53%;
         bottom: 68%;
         font-size: 14px;       /* Smaller text on mobile */
         margin-right: 20px;
         padding: 7px;
-        min-width: 190px;
+        min-width: 80%;
     }
 }
 
