--- a/index.html
+++ b/index.html
@@ -2875,7 +2875,7 @@ document.addEventListener('DOMContentLoaded', function() {
             
             <div class="footer-col">
     <div class="footer-logo" style="display: flex; align-items: center; gap: 10px; font-family: 'Cinzel Decorative';">
-        <img src="blacklogo.jpg" alt="Haseeb Collection Logo" style="height: 150px;">
+        <img src="blacklogo.png" alt="Haseeb Collection Logo" style="height: 150px;">
     </div>
     <p>Premium streetwear for the modern urban explorer. Quality craftsmanship meets contemporary design.</p>
     <div class="social-links">
@@ -4076,4 +4076,5 @@ addToCartBtn.addEventListener('click', () => {
     </script>
 </body>
 </html>
+
 
