--- a/haseeb.html
+++ b/haseeb.html
@@ -37,6 +37,11 @@
             box-sizing: border-box;
             font-family: "Jost", sans-serif;
         }
+        html, body {
+  width: 100%;
+  
+}
+
 
         body {
             background: var(--white);
@@ -54,7 +59,6 @@
     min-height: 100vh;
     display: flex;
     width: 100% !important;
-
     flex-direction: column;
 }
 
