--- a/haseeb.html
+++ b/haseeb.html
@@ -2530,7 +2530,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <!-- Testimonial 1 -->
         <div class="testimonial-card">
             <div class="testimonial-header">
-                <img src="https://img.freepik.com/premium-vector/one-person-pictogram_764382-14126.jpg" alt="Ali Raza" class="testimonial-img">
+                <img src="Profile-avator.jpg" alt="Ali Raza" class="testimonial-img">
                 <div class="testimonial-info">
                     <h3 class="testimonial-name">Ali Raza</h3>
                     <span class="testimonial-role">Customer</span>
@@ -2550,7 +2550,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <!-- Testimonial 2 -->
         <div class="testimonial-card">
             <div class="testimonial-header">
-                <img src="https://img.freepik.com/premium-vector/one-person-pictogram_764382-14126.jpg" alt="Sara Khan" class="testimonial-img">
+                <img src="Profile-avator.jpg" alt="Sara Khan" class="testimonial-img">
                 <div class="testimonial-info">
                     <h3 class="testimonial-name">Sara Khan</h3>
                     <span class="testimonial-role">Customer</span>
@@ -2570,7 +2570,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <!-- Testimonial 3 -->
         <div class="testimonial-card">
             <div class="testimonial-header">
-                <img src="https://img.freepik.com/premium-vector/one-person-pictogram_764382-14126.jpg" alt="Ahmed Ali" class="testimonial-img">
+                <img src="Profile-avator.jpg" alt="Ahmed Ali" class="testimonial-img">
                 <div class="testimonial-info">
                     <h3 class="testimonial-name">Ahmed Ali</h3>
                     <span class="testimonial-role">Customer</span>
@@ -2590,7 +2590,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <!-- Testimonial 4 -->
         <div class="testimonial-card">
             <div class="testimonial-header">
-                <img src="https://img.freepik.com/premium-vector/one-person-pictogram_764382-14126.jpg" alt="Fatima Noor" class="testimonial-img">
+                <img src="Profile-avator.jpg" alt="Fatima Noor" class="testimonial-img">
                 <div class="testimonial-info">
                     <h3 class="testimonial-name">Fatima Noor</h3>
                     <span class="testimonial-role">Customer</span>
@@ -2610,7 +2610,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <!-- Testimonial 5 -->
         <div class="testimonial-card">
             <div class="testimonial-header">
-                <img src="https://img.freepik.com/premium-vector/one-person-pictogram_764382-14126.jpg" alt="Hamza Ali" class="testimonial-img">
+                <img src="Profile-avator.jpg" alt="Hamza Ali" class="testimonial-img">
                 <div class="testimonial-info">
                     <h3 class="testimonial-name">Hamza Ali</h3>
                     <span class="testimonial-role">Customer</span>
@@ -2630,7 +2630,7 @@ document.addEventListener('DOMContentLoaded', function() {
         <!-- Testimonial 6 -->
         <div class="testimonial-card">
             <div class="testimonial-header">
-                <img src="https://img.freepik.com/premium-vector/one-person-pictogram_764382-14126.jpg" alt="Ayesha Malik" class="testimonial-img">
+                <img src="Profile-avator.jpg" alt="Ayesha Malik" class="testimonial-img">
                 <div class="testimonial-info">
                     <h3 class="testimonial-name">Ayesha Malik</h3>
                     <span class="testimonial-role">Customer</span>
