--- a/haseeb.html
+++ b/haseeb.html
@@ -2950,7 +2950,7 @@ document.addEventListener("DOMContentLoaded", () => {
             
             <div class="footer-col">
     <div class="footer-logo" style="display: flex; align-items: center; gap: 10px; font-family: 'Cinzel Decorative';">
-        <img src="blacklogo." alt="Haseeb Collection Logo" style="height: 150px;">
+        <img src="blacklogo.png" alt="Haseeb Collection Logo" style="height: 150px;">
     </div>
     <p>Premium streetwear for the modern urban explorer. Quality craftsmanship meets contemporary design.</p>
     <div class="social-links">
